correct `flex-gap` configs

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -1337,20 +1337,43 @@ $text-clamp:
 /* scroll snap */
 
  $scroll-snap-type:
-   (x-mandatory, x mandatory),
-   (y-mandatory, y mandatory),
-   (x-proximity, x proximity),
-   (y-proximity, y proximity),
-   (block-mandatory, block mandatory),
-   (block-proximity, block proximity),
-   (inline-mandatory, inline mandatory),
-   (inline-proximity, inline proximity),
-   (both-mandatory, both mandatory),
-   (both-proximity, both proximity);
+  (x-mandatory, x mandatory),
+  (y-mandatory, y mandatory),
+  (x-proximity, x proximity),
+  (y-proximity, y proximity),
+  (block-mandatory, block mandatory),
+  (block-proximity, block proximity),
+  (inline-mandatory, inline mandatory),
+  (inline-proximity, inline proximity),
+  (both-mandatory, both mandatory),
+  (both-proximity, both proximity);
 
 $scroll-snap-align:
   (none, none),
   (start, start),
   (center, center),
   (end, end);
+
+/* flex gap */
+
+$flex-gap:
+  (px, 1px),
+  (0, 0),
+  (1, 0.25rem),
+  (2, 0.5rem),
+  (3, 0.75rem),
+  (4, 1rem),
+  (5, 1.25rem),
+  (6, 1.5rem),
+  (8, 2rem),
+  (10, 2.5rem),
+  (12, 3rem),
+  (16, 4rem),
+  (20, 5rem),
+  (24, 6rem),
+  (32, 8rem),
+  (40, 10rem),
+  (48, 12rem),
+  (56, 14rem),
+  (64, 16rem);
 
